--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mariadb://localhost:3306/petclinic
+spring.datasource.username=root
+spring.datasource.password=relevant
+logging.level.ROOT=ERROR
