--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/petclinic
 spring.datasource.username=root
 spring.datasource.password=relevant
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 logging.level.ROOT=ERROR
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
